argocd/applications/prod/grafana-service-proxy-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-proxy
  namespace: argocd
  labels:
    app: infrastructure-services
    environment: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-service-proxy
  namespace: argocd
spec:
  subsets:
  - addresses:
    - ip: 172.20.5.161  # IP of kube-prometheus-stack-grafana service
    ports:
    - port: 80
      protocol: TCP
